Finished commenting on the modules and functions Finalized the swagger and README
